# srpm-tools

./: .gitignore  Makefile.am  README  configure.ac  srpm-tools.spec
build-aux/: srpm-tools-install-sh  srpm-tools-install-sh.in
libexec/: srpm-build
